# cmd/freezer/api/swagger.json
@@ -770,6 +770,10 @@
                     "type": "string",
                     "example": "1,243.02"
                 },
+                "totalMainnnetRewardPoolContributions": {
+                    "type": "string",
+                    "example": "1,243.02"
+                },
                 "totalMiningBlockchain": {
                     "type": "string",
                     "example": "1,243.02"
